# delivery_promo

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: main.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/assets/: promocodes.csv
backend/promocodes/: admin.py  models.py  pydantic_models.py  urls.py  views.py
backend/promocodes/management/commands/: load_data.py
backend/promocodes/migrations/: 0001_initial.py
backend/src/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .dockerignore  .prettierignore  .prettierrc.js  Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/result_build/: asset-manifest.json  index.html
frontend/src/: App.js  App.styles.jsx
frontend/src/common/: leaves.js  settings.js
frontend/src/contexts/: MultiContext.js  index.js
frontend/src/fonts/: font.css
frontend/src/stores/: AllStores.js  index.js  store.js
frontend/src/styles/: global.js  index.js  theme.js
infra/: docker-compose.local.yaml  docker-compose.yaml  nginx.conf
public/: index.html
src/: App.js  App.styles.jsx
src/common/: leaves.js  settings.js
src/components/: index.js
src/components/AppLink/: AppLink.jsx  AppLink.styles.jsx  index.js
src/components/CampaignInfo/: CampaignInfo.jsx  CampaignInfo.styles.jsx  index.js
src/components/Footer/: Footer.jsx  Footer.styles.jsx
src/components/HandMove/: HandMove.jsx  HandMove.styles.jsx  index.js
src/contexts/: MultiContext.js
src/stores/: AllStores.js  index.js  store.js
src/styles/: global.js  index.js  theme.js
(+46 files in other folders)
